# iocpy3

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
iocpy/: __init__.py  ioc_container.py  ioc_context.py  ioc_provider.py  ioc_registry.py
iocpy/behaviors/: scoped.py  singelton.py  singleton.py  transient.py
iocpy/interfaces/: behavior_registry.py  instance_behavior.py  instance_provider.py  ioc_context.py
tests/: test_ioc_container.py
